[Backend] Unlocked API for Frontend Development & API doc modification
