# backend/internal/app/app.go
@@ -111,6 +111,12 @@ func RunServer() {
 	userApp.Get("/profile", userHandler.GetUserByID)
 	userApp.Put("/update-password", userHandler.UpdatePassword)
 
+	// Front-End
+	feApp := api.Group("/fe")
+	feApp.Get("/categories", categoryHandler.GetCategoryFE)
+	feApp.Get("/contents", contentHandler.GetContentWithQuery)
+	feApp.Get("/contents/:contentID", contentHandler.GetContentDetail)
+
 	go func() {
 		if cfg.App.AppPort == "" {
 			cfg.App.AppPort = os.Getenv("APP_PORT")
